2008-09-04   D. V. Wiebe <getdata@ketiltrout.net>  svn:73
	* bindings/cxx/entry.h (Entry::Scale, Entry::Offset): fix return.

	* src/flush.c (_GD_Flush): Handle GD_NO_ENTRY in switch

	* test/dfes_bit.c test/dfes_linterp test/dfes_lincom test/dfes_multiply
	test/dfes_phase test/dfes_raw test/flist test/flush_invalid
	test/flush_bad_code test/flush_recurse: Remove unused variables
	* test/entry_lincom: Include math.h

2008-09-04   D. V. Wiebe <getdata@ketiltrout.net>  svn:68
	* src/getdata_legacy.h src/legacy.c: Go through all the bother to
	reconstruct the former FormatType for callers who use GetFormat()

	* src/close.c (_GD_FreeD): Handle GD_NO_ENTRY in switch

	* configure.ac: Use modern AM_INIT_AUTOMAKE invocation so as not to have
	to repreat package name and package version.
	* Makefile.am: Require automake 1.6

	* NEWS: added

2008-09-04   D. V. Wiebe <getdata@ketiltrout.net>  svn:67
	* bindings/cxx/Makefile.am: Fix include dir

	* bindings/f77/fgetdata.c (GDFELC): Return nfield = 0 on error

	* bindings/f77/getdata.f90.in: Make field an array

	* Makefile.am: Add ChangeLog to dist.

	* README.cxx README.f77 README.f95: Update for get_entry() bindings

2008-09-04   D. V. Wiebe <getdata@ketiltrout.net>  svn:66
	* test/Makefile.am test/dfes_bit.c test/dfes_lincom.c test/dfes_linterp.c
	test/dfes_multiply.c test/dfes_null.c test/dfes_phase.c test/dfes_raw.c
	test/dfes_zero.c test/entry_bad_code.c test/entry_bit.c test/entry_invalid.c
	test/entry_lincom.c test/entry_linterp.c test/entry_multiply.c
	test/entry_phase.c test/entry_raw.c: Add test suite for
	dirfile_free_entry_strings() and get_entry()

	* bindings/cxx/entry.h bindings/cxx/test/entry.cpp bindings/f77/fgetdata.c
	bindings/f77/getdata.f90.in bindings/f77/test/fget_entry.f90 man/get_entry.3
	src/entry.c src/getdata.h.in: RAW filename should be internal

	* bindings/f77/make_parameters.c: Fix parentheses around F77 parameters

	* man/Makefile.am: install get_entry.3
